aligner.js : update focus/hide icon

--- a/browser/index.html
+++ b/browser/index.html
@@ -611,12 +611,16 @@
 
                     <div id="aligner-stats" class="stats"><span  title="">
                             <span class="stats_content"></span>
-                            <a class="focus_selected" id="focus_selected">(focus)</a> 
-                            <a class="focus_selected" id="hide_selected">(hide)</a>
-                            <span class="button" id="star_selected" title="Tag selected clones">
-                                    <i id="tag_icon__multiple" class="icon-star-2"></i></span>
-                            <span id="fixsegmenter" class="button">
-                                    <i title="fix the segmenter in his position" class="icon-pin-outline"></i></span>
+                            <span id="focus_selected" class="button"    title="Focus on selected Clones (ctrl+z)" >
+                                <i class="icon-eye"></i></span>
+                            <span id="hide_selected" class="button"     title="Hide selected Clones (shift+z)">
+                                <i  class="icon-eye-off"></i></span>
+                            <span class="button" id="reset_focus"       title="Reset Focus/Hide filters (z)">
+                                <i  class="icon-cancel-circled-outline"></i></span>
+                            <span class="button" id="star_selected"     title="Tag selected clones">
+                                <i id="tag_icon__multiple" class="icon-star-2"></i></span>
+                            <span id="fixsegmenter" class="button"      title="fix the segmenter in his position">
+                                <i  class="icon-pin-outline"></i></span>
                     </div>
             </div>
 
