model.js; add a new boolean variable trimming_before_external
This variable will be used to indicate if a sequence should be cleaned before sending to external tools

Also add a checkbox link to model to switch the value

--- a/browser/index.html
+++ b/browser/index.html
@@ -334,6 +334,21 @@
 			                <!-- TODO : construire liste à partir des data disponibles/chargées dans le model.
                               TODO : passer ça en liste deroulante ? -->
                         </div>
+
+
+                        <div class="menu_box">
+                            Trimming of sequence before call to external tools
+                            <div id="remove_primer_external"
+                                title="Remove primers before sending sequence to external call">
+                                <input id="remove_primer_external_check" type="checkbox"> Trimming of sequence</input>
+                            </div>   
+                            <div id="remove_primer_include"
+                                title="Include primer in the trimming">
+                                <input id="remove_primer_include_check" type="checkbox"> Include primer in the trimming</input>
+                            </div>
+                        </div>
+
+
                         <!--
                         <div class="submenu" id="system_menu" style="display:none">
                             <div class="menu_box">
