index.html: bikeshedding message

--- a/browser/index.html
+++ b/browser/index.html
@@ -337,10 +337,9 @@
 
 
                         <div class="menu_box">
-                            Trimming of sequence before call to external tools
                             <div id="remove_primer_external"
-                                title="Remove primers before sending sequence to external call">
-                                <input id="remove_primer_external_check" type="checkbox"> Trimming of sequence</input>
+                                title="Primers will be trimmed before sending them to an external tool (such as IMGT/V-QUEST, IgBlast, Blast, …)">
+                                <input id="remove_primer_external_check" type="checkbox">                             Trimming primers for external tools</input>
                             </div>
                         </div>
 
