--- a/browser/index.html
+++ b/browser/index.html
@@ -180,7 +180,7 @@
                             <a class="buttonSelector disabledClass" id="export_fasta_align" onclick="javascript:segment.exportAlignFasta()">export aligned fasta (selected clonotypes)</a>
 
                         </div>
-                        <div class="menu_box devel-mode">
+                        <div class="menu_box">
                             <a class="buttonSelector" id="export_add_germline" onclick="javascript:segment.add_all_germline_to_segmenter()">add germline genes (experimental)</a>
                         </div>
                     </div>
