qunit : add missing tests

--- a/browser/test/QUnit/test_Qunit.html
+++ b/browser/test/QUnit/test_Qunit.html
@@ -31,7 +31,7 @@
     <div style="opacity:0% !important; position:absolute; z-index:-5">
         <div id="data-container" ></div>
         <div id="visu" style="width:800px; height:500px;"></div>
-        <div id="segment" style="width:800px; height:500px;"></div>
+        <div id="segment" style="width:800px;"></div>
         <div id="info-row" style="width:800px; height:500px;"><div id="info"> </div></div>
         <div id="list-row" style="width:800px; height:500px;"><div id="list"> </div></div>
         <div id="data-row" style="width:800px; height:500px;"><div id="data"> </div></div>
