css/html; minor modification of classes

--- a/browser/index.html
+++ b/browser/index.html
@@ -701,8 +701,8 @@
                 <option value="custom">–</option>
             </select>
         </div>
-        <div class="axis_select">
-            Mode :
+        <div class="axis_select axis_select_icon">
+            <p>Mode :</p>
             <div class="sp_menu_icon sp_menu_icon_bar"></div>
             <div class="sp_menu_icon sp_menu_icon_grid"></div>
         </div>
