Add library to get better dropdown list with search Link to #3683

--- a/browser/index.html
+++ b/browser/index.html
@@ -39,8 +39,10 @@
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.css" />
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.structure.css" />
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.theme.css" />
+    <link rel="stylesheet" href="css/lib/select2.min.css" />
 
     <script data-main="js/app.js" src="js/lib/require.js"></script>
+
 
 <!--
     <script>
