index.html : add new sample name display option in menu

--- a/browser/index.html
+++ b/browser/index.html
@@ -265,6 +265,10 @@
                         </div>
                         <div class="menu_box">
                             sample key</br>
+                            <label for="menuTimeForm_order" class="buttonSelector">
+                                <input id="menuTimeForm_order" type="radio" name="time" value="order"
+                                       onclick="m.changeTimeFormat('order', true, true)"/> #
+                            </label>
                             <label for="menuTimeForm_name" class="buttonSelector">
                                 <input id="menuTimeForm_name" type="radio" name="time" value="name" checked
                                        onclick="m.changeTimeFormat('name', true, true)"/>name
