--- a/browser/index.html
+++ b/browser/index.html
@@ -747,21 +747,9 @@
 
         </div>
 
-        <div class="menu_box" id="report-settings-type-select">
-            <div class="">
-                Report Type
-            </div>
-        </div>
-
         <div class="menu_box" id="report-settings-sample-select">
             <div class="">
-                Sample
-            </div>
-        </div>
-
-        <div class="menu_box" id="report-settings-multi_sample-select">
-            <div class="">
-                Sample(s)
+                Sample(s) <span id="rs-selected-sample-count" style="float: right;"></span>
             </div>
         </div>
 
