index.html : add template used for report color selection

--- a/browser/index.html
+++ b/browser/index.html
@@ -759,9 +759,25 @@
             </div>
         </div>
 
+        <div class="menu_box" id="report-settings-color-select">
+            <div class="">
+                Color 
+            </div>
+            <table class="rs-flex-parent-v">
+                <tr class="">
+                    <td>Default Clonotype Color :</td> <td><select name="rs-default-color" id="rs-default-color" class=""></select></td>
+                </tr>
+                <tr class="">
+                    <td>Selected Clonotype Color :</td> <td><select name="rs-selected-color" id="rs-selected-color" class=""></select></td>
+                </tr>
+            </table>
+
+        </div>
+
         <div class="menu_box" id="report-settings-clones">
             <div class="">
                 Clonotypes
+                <span id="rs-selected-clones-count" style="float: right;"></span>
             </div>
         </div>
 
