--- a/browser/report.html
+++ b/browser/report.html
@@ -394,6 +394,9 @@
             .circle{
                 stroke : none;
             }
+            .circle_hidden{
+                display : none;
+            }
         </style>
     </head>
     
