index.html : add link for report settings

--- a/browser/index.html
+++ b/browser/index.html
@@ -168,6 +168,8 @@
                                 onclick="javascript:report.reportHTMLdiag()">export report (sample)</a>
                             <a class="buttonSelector" id="export_monitor_report"
                                 onclick="javascript:report.reportHTML()">export report (monitor)</a>
+                            <a class="buttonSelector" id="export_report_menu"
+                                onclick="javascript:report.menu()">report settings</a>
                         </div>
                         <div class="menu_box">
                             <a class="buttonSelector" id="export_analysis" onclick="javascript:m.saveAnalysis()">export analysis</a>
