export.js : add tools to reorder blocks/containers

--- a/browser/report.html
+++ b/browser/report.html
@@ -410,6 +410,9 @@
             <div id="header-logo"><div id="logo">Vidjil <span class="logo">(beta)</span></div></div>
             <div id="header-title">Report template</div>
         </div>
+
+        <div id="containers">
+        </div>
     </body>
 
 </html>
