--- a/browser/index.html
+++ b/browser/index.html
@@ -579,7 +579,7 @@
 
                     <div id="align-settings" class="aligner-menu" title="Alignement settings">
                             <span ><i class="icon-cog"></i></span>
-                            <div class="menu-content">
+                            <div id="align-settings_select" class="menu-content">
                                 <label for="highlight_match" title="matches">
                                             <span><input type="checkbox" id="highlight_match" autocomplete="off"></span>
                                             <span>Show only mutations</span>
@@ -611,7 +611,7 @@
 
                     <div id="align-segment-info" class="aligner-menu" title="Sequence features">
                             <span  ><i class="icon-menu"></i></span>
-                            <div class="menu-content">
+                            <div id="align-segment-info_select" class="menu-content">
      
                             </div>
                     </div>
@@ -619,7 +619,7 @@
                     <div id="align-imgt" class="aligner-menu"
                     title="Sequence features from IMGT [click to reload]" onclick="javascript:segment.sendTo('IMGTSeg');"> <i class="icon-menu"></i> IMGT
                        <span title="reload IMGT info" ></span><i class="demo-icon icon-arrows-ccw"></i></span>
-                       <div class="menu-content">
+                       <div id="align-imgt_select" class="menu-content">
 
                        </div>
                     </div>
