cypress : test_aligner_page.js
test for vidjil aligner standalone tool segmenter_page.html

--- a/browser/segmenter_page.html
+++ b/browser/segmenter_page.html
@@ -122,6 +122,10 @@
                                     <a id="toAssignSubsets"
                                             title="Send sequences to ARResT/AssignSubsets to classify IGH sequence in a CLL subset"
                                             class="aligner-button" onclick="javascript:segment.sendTo('assignSubsets');"><i class="icon-forward-1"></i> AssignSubsets</a>
+                                    <span class="devel-mode"><label title="Open external tool in another tab" class="aligner-checkbox-label" for="post_target_blank">
+                                        <span><input class="aligner-checkbox-input" type="checkbox" id="post_target_blank" autocomplete="off" checked="true"></span>
+                                        <span class="aligner-checkbox-text">use new tab</span>
+                                    </label></span>
                             </div>
                     </div>
 
